--- a/package.json
+++ b/package.json
@@ -21,27 +21,27 @@
     "lodash": "^4.17.21",
     "smashgg.js": "^4.1.17",
     "v-hotkey": "^0.9.0",
-    "vue": "^2.6.11",
+    "vue": "2.6.12",
     "vue-country-flag": "^2.1.1",
     "vue-i18n": "^8.24.5",
     "vue-select": "^3.11.2",
     "vue-toasted": "^1.1.28",
-    "vuetify": "^2.5.6"
+    "vuetify": "2.5.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/composition-api": "^1.0.0-rc.8",
+    "@vue/composition-api": "1.0.0-rc.8",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^5.0.0",
+    "node-sass": "^9.0.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.1.1",
     "vue-cli-plugin-vuetify": "^2.4.0",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "vue-template-compiler": "2.6.12",
+    "vuetify-loader": "1.7.2"
   },
   "eslintConfig": {
     "root": true,
